cnn classification multitask

--- a/src/LSF_analysis.ipynb
+++ b/src/LSF_analysis.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {
     "scrolled": false
    },
@@ -175,23 +176,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1.28674662e+00+0.00000000e+00j  1.06018737e+00+1.45922273e+00j\n",
-      " -1.99075657e+00+6.12691872e+00j -1.11046112e+03+3.60810691e+02j\n",
-      "  8.17379047e+00+5.93860639e+00j  7.67011746e-16+7.92500509e-01j\n",
-      " -1.65064879e-01+1.19926654e-01j -8.28109774e-02-2.69069176e-02j\n",
-      " -1.57234622e-02-4.83918406e-02j  2.21504348e-02-3.04874580e-02j]\n",
-      "[ 1.28674662+0.j          0.29426296-0.09156525j  0.17357058+0.13492594j\n",
-      " -0.04262375+0.26875457j -0.5216468 +0.19562613j -0.9551901 +0.35606594j\n",
-      " -0.32983095-0.10817672j -0.03131118-0.18921617j  0.12513674-0.10628999j\n",
-      "  0.22721733+0.04317008j]\n",
-      "sd-0.009\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ILangevin\\AppData\\Local\\conda\\conda\\envs\\environnement36Tensorflow\\lib\\site-packages\\ipykernel_launcher.py:23: ComplexWarning: Casting complex values to real discards the imaginary part\n"
+      "[ 1.         -0.78861324  1.23478259 -0.84297826  1.13416297 -0.54030231]\n",
+      "[ 1.         -0.69991398  1.04308492 -0.56200502  0.9424653  -0.45160304]\n",
+      "sd0.935, IS16sd 0.259\n"
      ]
     }
    ],
@@ -200,72 +187,129 @@
     "import math\n",
     "import numpy as np\n",
     "from spectrum import linear_prediction as lpd\n",
-    "def SD_loss(lsf_true,lsf_pred,fs,N,n0,n1):\n",
+    "def SD_loss(lsf_true,lsf_pred,N,n0,n1):\n",
     "    SD = []\n",
+    "    IS16SD = []\n",
     "    for frameid in range(len(lsf_true)):\n",
     "        lpc_true = lpd.lsf2poly(lsf_true[frameid])\n",
     "        lpc_pred = lpd.lsf2poly(lsf_pred[frameid])\n",
-    "        #print(lpc_true)\n",
-    "        #print(lpc_pred)\n",
-    "        _, freqResponse_true = signal.freqz(b=lpc_true,a=1,worN=N,fs=44.1)\n",
-    "        _, freqResponse_pred = signal.freqz(b=lpc_pred,a=1,worN=N,fs=44.1)\n",
-    "        print(freqResponse_true)\n",
-    "        logValue = np.log10((freqResponse_true[n0:n1] / freqResponse_pred[n0:n1])**2)\n",
+    "\n",
+    "        _, freqResponse_true = signal.freqz(b=1,a=lpc_true,worN=N)\n",
+    "        _, freqResponse_pred = signal.freqz(b=1,a=lpc_pred,worN=N)\n",
+    "        \n",
+    "        #print(freqResponse_true)\n",
+    "        freq_th = freqResponse_true[n0-1:n1]\n",
+    "        freq_pred = freqResponse_pred[n0-1:n1]\n",
+    "        #print(freq_th)\n",
+    "        absoluteRadio = (freq_th.real**2+freq_th.imag**2)**0.5 / (freq_pred.real**2+freq_pred.imag**2)**0.5\n",
+    "        \n",
+    "        #print(absoluteRadio)\n",
+    "        logValue = np.log10(absoluteRadio**2)\n",
     "        #print(logValue)\n",
-    "        bigsum = 100*(logValue**2).sum()\n",
+    "        bigsum = ((10*logValue)**2).sum()\n",
     "        #print(bigsum)\n",
+    "        \n",
+    "        #print(1.0/(n1-n0)*bigsum)\n",
+    "        #print(\"IS16 sd\",math.sqrt(1.0/(n1-n0)*bigsum))\n",
     "        sd = math.sqrt(1.0/(n1-n0)) * bigsum\n",
+    "        IS16sd = math.sqrt(1.0/(n1-n0) * bigsum)\n",
     "        SD.append(sd)\n",
-    "    return SD, sum(SD) *1.0 / len(SD)\n",
-    "_,sd = SD_loss([[1,1,1,1,1,1],[1,2,1,2,1,2]],[[1,1.1,1,1,1,1],[1,2,1.1,2,1,2,]],44.1,10,0,10)\n",
-    "print(\"sd%.3f\" % sd)"
+    "        IS16SD.append(IS16sd)\n",
+    "    return SD,IS16SD, sum(SD) *1.0 / len(SD),sum(IS16SD)*1.0/len(IS16SD)\n",
+    "_,_,sd,IS16sd = SD_loss([[1, 2, 1 ,1 ,2]], [[1, 2 ,1 ,1, 2.1]],6.28,512, 6,200)\n",
+    "print(\"sd%.3f, IS16sd %.3f\" % (sd,IS16sd))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "f, h = signal.freqz([ 1. ,        -0.78861324  ,1.23478259, -0.84297826 , 1.13416297, -0.54030231], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1.2.0'"
+       "{'a0': 'a',\n",
+       " 'a1': 'a',\n",
+       " 'a2': 'a',\n",
+       " 'a3': 'a',\n",
+       " 'a4': 'a',\n",
+       " 'a5': 'a',\n",
+       " 'a6': 'a',\n",
+       " 'a7': 'a',\n",
+       " 'a8': 'a',\n",
+       " 'a9': 'a'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import scipy\n",
-    "scipy.__version__"
+    "{'a%d' % i:'a' for i in range(10)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1.1.0'"
+       "array([1, 2])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scipy.__version__\n"
+    "import numpy as np\n",
+    "a = np.array([[1],[2]])\n",
+    "a.flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2]])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.transpose()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -286,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
